add feature to not have two components on the same line with jjv

--- a/release.json
+++ b/release.json
@@ -1,10 +1,10 @@
 {
-	"lines": [{
-		"A": {
-			"text": "text"
+	"lines" : [
+		{
+			"foo" : "1"
 		},
-    "B": {
-      "foo": "bar"
-    }
-	}]
+		{
+			"bar" : 1
+		}
+	]
 }
